--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Ask any question!",
   "license": "MIT",
   "scripts": {
-   "dev": "pnpm run -r --parallel --aggregate-output dev",
+    "dev": "pnpm run -r --parallel --aggregate-output dev",
     "build": "pnpm run -r build",
+    "start": "pnpm run -r start",
     "test": "pnpm run -r --parallel test",
     "lint": "pnpm run -r --parallel lint",
     "deploy": "pnpm build && pnpm run -r deploy"
   },
-  "keywords": ["AI", "Agents"],
+  "keywords": [
+    "AI",
+    "Agents"
+  ],
   "author": "https://github.com/diegorezm",
-  "license": "ISC",
   "packageManager": "pnpm@10.12.4"
 }
