--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
 		"check": "biome check"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.14",
+		"@radix-ui/react-slot": "^1.2.3",
 		"@tailwindcss/vite": "^4.0.6",
 		"@tanstack/react-query": "^5.66.5",
 		"@tanstack/react-query-devtools": "^5.66.5",
