--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "private": true,
+  "exports": {
+    "./trpc": "./src/trpc.ts",
+    "./router": "./src/router.ts"
+  },
   "scripts": {
     "start": "node --env-file=.env --experimental-strip-types --no-warnings  src/server.ts",
     "dev": "node --env-file=.env --experimental-strip-types --no-warnings  --watch src/server.ts",
