--- a/packages/trpc-client/package.json
+++ b/packages/trpc-client/package.json
@@ -1,22 +1,24 @@
 {
-	"name": "@letmeask/trpc-client",
-	"version": "1.0.0",
-	"type": "module",
-	"exports": {
-		".": "./src/index.ts"
-	},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"packageManager": "pnpm@10.12.4",
-	"dependencies": {
-		"@tanstack/react-query": "^5.81.5",
-		"@letmeask/api": "workspace:^",
-		"@trpc/client": "^11.4.3",
-		"@trpc/server": "^11.4.3",
-		"@trpc/tanstack-react-query": "^11.4.3"
-	}
+  "name": "@letmeask/trpc-client",
+  "version": "1.0.0",
+  "type": "module",
+  "exports": {
+    ".": "./src/index.ts",
+    "./types": "./src/types.d.ts"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "packageManager": "pnpm@10.12.4",
+  "dependencies": {
+    "@tanstack/react-query": "^5.81.5",
+    "@letmeask/api": "workspace:^",
+    "@trpc/client": "^11.4.3",
+    "@trpc/server": "^11.4.3",
+    "typescript": "^5.8.3",
+    "@trpc/tanstack-react-query": "^11.4.3"
+  }
 }
