--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-drizzle": "^0.2.3",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.1",
+    "openai": "^5.8.3",
     "postgres": "^3.4.7",
     "zod": "^3.25.75"
   },
