--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,6 +43,7 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "dom-speech=recognition": "link:@types/dom-speech=recognition",
     "jsdom": "^26.0.0",
     "typescript": "^5.7.2",
     "ultracite": "5.0.32",
